Issue #896.  Fixed and changed a few things about entity cards, text overflow and links displayed.

--- a/resources/assets/css/custom-layout.css
+++ b/resources/assets/css/custom-layout.css
@@ -126,6 +126,16 @@ img.thumbnail-image {
 	font-size: .75rem;
 }
 
+.vertical-list {
+	list-style-type: none;
+	padding-left: 0px;
+}
+
+.vertical-list li {
+    margin-bottom: 10px;
+}
+
+
 .day-list {
 	list-style-type: none;
 	padding-left: 0px;
